<resources>
    <string name="app_name">PhotoFamily</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_new_account">Create New Account</string>
    <string name="label_keep_signed_in">Keep me signed in</string>
    <string name="btn_exit">Logout</string>
    <string name="btn_create_album">Create Album</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_album_name">Album\'s name</string>
    <string name="hint_date">Event\'s date</string>
    <string name="hint_location">Event\'s location</string>
    <string name="btn_go_to_comments">Go to comments</string>
    <string name="btn_send">Send</string>
    <string name="btn_add_album">Add Album</string>
    <string name="btn_get_family_serial">Get Serial</string>
    <string name="btn_create_family">Create Family</string>
    <string name="btn_join_family">Join</string>
    <string name="btn_add_user_photo">Edit your photo</string>
    <string name="btn_add_photo">Add a photo</string>
    <string name="btn_back_albums">Back to albums</string>
    <string name="btn_back_album">Back to album</string>


</resources>
