<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Controller.Start.MainActivity">
    <item android:id="@+id/btn_back_to_albums"
        android:icon="@drawable/back_button"
        android:title="@string/btn_back_albums"
        app:showAsAction="always" />
    <item android:id="@+id/btn_comments"
        android:icon="@drawable/family_talk"
        android:title="@string/btn_go_to_comments"
        app:showAsAction="always" />
    <item android:id="@+id/fragment_album_btn_add"
        android:icon="@drawable/add_image"
        android:title="@string/btn_add_photo"
        app:showAsAction="always" />
</menu>

