<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/btn_add_album"
            android:padding="6dp"/>
        <TextView
            android:id="@+id/btn_get_family_serial"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/btn_get_family_serial"
            android:padding="6dp"/>
        <TextView
            android:id="@+id/btn_create_family"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/btn_create_family"
            android:padding="6dp"/>


        <TextView
            android:id="@+id/btn_exit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/btn_exit"
            android:padding="6dp"/>
    </LinearLayout>

    <ListView
        android:id="@+id/albums_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
    <ProgressBar
        android:id="@+id/album_list_progressbar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"/>
</LinearLayout>